# KaggleCompetitions

./: .env.example  .gitignore  .pages-build  README.md  index.html  pyproject.toml
.github/workflows/: deploy-streakscope.yml  sim-heartbeat.yml
PredictingHeartDisease/: .gitignore  README.md  requirements.txt
PredictingHeartDisease/notebooks/: 01_eda.ipynb
PredictingHeartDisease/research/: PLAN.md  attempt_log.jsonl  baseline.json
PredictingHeartDisease/scripts/: download_data.py  get_submission_scores.py  improvement_loop.py  run_auto_loop.py  run_improved.py  submit.py  submit_to_kaggle.py  tune_optuna.py  verify_auth.py
PredictingHeartDisease/src/: config.py  data_loader.py  features.py  nim_client.py  submission_context.py  train.py  train_improved.py  train_variants.py
assets/: index-99BPiTRJ.js  index-B5bN7TGd.js  index-BZJgkYV6.js  index-B_aBPF_p.js  index-CW2wVFo8.js  index-rlfKNYoa.js
competitions/orbit-wars/: NOTES.md  main.py
competitions/playground_series_s6e6/: features.py  run.py  run_fast.py
conf/: global_defaults.yaml
conf/augmentation/: default.yaml
conf/competition/: _template.yaml  base.yaml  playground_series_s6e2.yaml  playground_series_s6e6.yaml
conf/cv/: base.yaml
conf/distillation/: default.yaml
conf/model/: base.yaml
data/: sim-log.md  sim-state.json
docs/: index.html
harness/: artifacts.py  base.py  cli.py  hydra_utils.py  metrics.py  serialization.py
notebooks/: kaggle_harness_template.ipynb
streakscope/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
(+100 files in other folders)
